--- a/devA/javaScript/apuntesJavascript/bigInt.html
+++ b/devA/javaScript/apuntesJavascript/bigInt.html
@@ -12,26 +12,7 @@
 <body>
     <header><h1>Sintáxis Básica</h1></header>
     <div class="contenedor">
-        <div class="indice">
-            <ol>
-                <li>Intro</li>
-                <li>Variables y ambitos</li>
-                <li>Tipos de datos</li>
-                <li>Operadores y expresiones</li>
-                <li>Control de flujo</li>
-                <li>Gestión de errores</li>
-                <li>Bucles</li>
-                
-            </ol>
-            <ol start="8">
-                <li>Objetos</li>
-                <li>Funciones</li>
-                <li>Clases</li>
-                <li>Expresiones regulares</li>
-                <li>Eventos</li>
-                <li>DOM</li>
-            </ol>
-        </div>
+      <div class="botonVolver"><h4><a href="indice.html"><<< Indice</a></h4></div>
         <h3>El tipo BigInt</h3>
         <p>Es un tipo de dato que premite representar valores muy grandes, de una forma relativamente sencilla y compatible con lo que ya existe.</p>
         <table>
@@ -134,6 +115,7 @@
             BigInt.asUintN(2, 4n);   // 0n (Representa el 4 con 2 bits) ❌
           </code>
         </pre>
+      <div class="botonVolver"><h4><a href="indice.html"><<< Indice</a></h4></div>
     </div>
 </body>
 </html>
