--- a/devA/javaScript/apuntesJavascript/conversionesNumericas.html
+++ b/devA/javaScript/apuntesJavascript/conversionesNumericas.html
@@ -12,26 +12,7 @@
 <body>
     <header><h1>Sintáxis Básica</h1></header>
     <div class="contenedor">
-        <div class="indice">
-            <ol>
-                <li>Intro</li>
-                <li>Variables y ambitos</li>
-                <li>Tipos de datos</li>
-                <li>Operadores y expresiones</li>
-                <li>Control de flujo</li>
-                <li>Gestión de errores</li>
-                <li>Bucles</li>
-                
-            </ol>
-            <ol start="8">
-                <li>Objetos</li>
-                <li>Funciones</li>
-                <li>Clases</li>
-                <li>Expresiones regulares</li>
-                <li>Eventos</li>
-                <li>DOM</li>
-            </ol>
-        </div>
+        <div class="botonVolver"><h4><a href="indice.html"><<< Indice</a></h4></div>
         <h2>Conversiones numéricas</h2>
         <p>Que no tengamos que declarar su tipo de dato, no significa que nos despreocupemos de ello. Hay momentos en que nos interese convertir un string a número por muchos motivo.</p>
         <h3>Convertir texto a número. Números enteros</h3>
@@ -157,6 +138,7 @@
                 (245123).toString(16);  // "3bd83"
             </code>
         </pre>
+        <div class="botonVolver"><h4><a href="indice.html"><<< Indice</a></h4></div>
     </div>
 </body>
 </html>
