--- a/devA/javaScript/apuntesJavascript/indice.html
+++ b/devA/javaScript/apuntesJavascript/indice.html
@@ -9,29 +9,156 @@
     <link rel="stylesheet" href="jScript.css">
     <title>Document</title>
 </head>
-<body>
-  <header><h1>Indice</h1></header>
-  <div class="contenedor">
-    <div class="indice">
+<body class="indice">
+  <header><h1>Temas Javascript</h1></header>
+  <div class="contenedorIndice">
+    <div class="bloque">
+      <h3>Básica y Funciones</h3>
       <ul>
         <li><a href="sintaxisBasica.html">Sintaxis Básica</a></li>
+        <li><a href="funciones.html">Funciones</a></li>
+      </ul>
+    </div>
+    <div class="bloque">
+      <h3>Number</h3>
+      <ul>
         <li><a href="number.html">Number</a></li>
         <li><a href="nan.html">NaN</a></li>
         <li><a href="conversionesNumericas.html">Conversiones Numericas</a></li>
         <li><a href="objetoMath.html">Objeto Math</a></li>
         <li><a href="bigInt.html">BigInt</a></li>
+      </ul>
+    </div>
+    <div class="bloque">
+      <h3>Strings</h3>
+      <ul>
         <li><a href="string.html">String</a></li>
         <li><a href="posicionesSubstring.html">Posiciones Substring</a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+        <li><a href="">Buscar y reemplazar</a></li>
+        <li><a href="">Modificar cadenas</a></li>
+      </ul>
+    </div>
+    <div class="bloque">
+      <h3>Objetos</h3>
+      <ul>
+        <li><a href="">Objetos</a></li>
+        <li><a href="">JSON</a></li>
+        <li><a href="">Destructuración de Objetos</a></li>
+        <li><a href="">Clonar objetos o elementos</a></li>
+        <li><a href="">Iteradores</a></li>
+        <li><a href="">Arrays</a></li>
+      </ul>
+    </div>
+    <div class="bloque">
+      <h3>Arrays</h3>
+      <ul>
+        <li><a href="">Buscar elementos</a></li>
+        <li><a href="">Modificar o crear subarrays</a></li>
+        <li><a href="">Ordenar</a></li>
+        <li><a href="">Array function</a></li>
+        <li><a href="">Destructuración</a></li>
+      </ul>
+    </div>
+    <div class="bloque">
+      <h3>Set / Map</h3>
+      <ul>
+        <li><a href="">Set</a></li>
+        <li><a href="">Operaciones de conjuntos</a></li>
+        <li><a href="">Map</a></li>
+      </ul>
+    </div>
+    <div class="bloque">
+      <h3>Módulos</h3>
+      <ul>
+        <li><a href="">Módulos</a></li>
+        <li><a href="">Exportar</a></li>
+        <li><a href="">Importar</a></li>
+        <li><a href="">Import dinámico</a></li>
+        <li><a href="">Import Maps</a></li>
+      </ul>
+    </div>
+    <div class="bloque">
+      <h3>Orientación a Objetos - Clases</h3>
+      <ul>
+        <li><a href="">Orientación a objetos</a></li>
+        <li><a href="">Clases</a></li>
+        <li><a href="">Propiedades de Clases</a></li>
+        <li><a href="">Métodos de Clases</a></li>
+        <li><a href="">Herencia de clases</a></li>
+      </ul>
+    </div>
+    <div class="bloque">
+      <h3>DOM</h3>
+      <ul>
+        <li><a href="">DOM</a></li>
+        <li><a href="">Selecionar elementos</a></li>
+        <li><a href="">Crear elementos</a></li>
+        <li><a href="">Gestionar atributos</a></li>
+        <li><a href="">API classList</a></li>
+        <li><a href="">Contenido</a></li>
+        <li><a href="">Insertar elementos</a></li>
+        <li><a href="">Navegar por elementos</a></li>
+        <li><a href="">Animar elementos</a></li>
+      </ul>
+    </div>
+    <div class="bloque">
+      <h3>Eventos</h3>
+      <ul>
+        <li><a href="">Eventos</a></li>
+        <li><a href="">Eventos mediante <HTML></HTML></a></li>
+        <li><a href="">Eventos mediante Javascript</a></li>
+        <li><a href="">addEventListener</a></li>
+        <li><a href="">Escuchar enventos y handleEvent</a></li>
+        <li><a href="">Eventos nativo</a></li>
+        <li><a href="">Eventos presonalizados</a></li>
+        <li><a href="">Eventos del navegador</a></li>
+        <li><a href="">Emisión de Eventos</a></li>
+        <li><a href="">Propagación de eventos</a></li>
+      </ul>
+    </div>
+    <div class="bloque">
+      <h3>Fechas / Horas</h3>
+      <ul>
+        <li><a href="">Tipo Date</a></li>
+        <li><a href="">Formatear fechas con initial-scale</a></li>
+        <li><a href="">Fechas relativas con initial-scale</a></li>
+        <li><a href="">Formatear fechas con dayjs</a></li>
+      </ul>
+    </div>
+    <div class="bloque">
+      <h3>Expresiones Regulares</h3>
+      <ul>
+        <li><a href="">Expresión regular</a></li>
+        <li><a href="">Propiedades y flags</a></li>
+        <li><a href="">Buscar y capturar textos</a></li>
+        <li><a href="">Crear expresiones regulares</a></li>
+      </ul>
+    </div>
+    <div class="bloque">
+      <h3>Temporizadores</h3>
+      <ul>
+        <li>setTimeout</li>
+        <li>setInterval</li>
+      </ul>
+    </div>
+    <div class="bloque">
+      <h3>Asincronía</h3>
+      <ul>
+        <li><a href="">Asincronía</a></li>
+        <li><a href="">Funciones callbacks</a></li>
+        <li><a href="">Promesas</a></li>
+        <li><a href="">Async / Await</a></li>
+        <li><a href="">Promesas en grupo</a></li>
+      </ul>
+    </div>
+    <div class="bloque">
+      <h3>Asincronía</h3>
+      <ul>
+        <li><a href="">AJAX: Peticiones HTTP</a></li>
+        <li><a href="">XHR: XMLHttpRequest</a></li>
+        <li><a href="">Fecht: Peticiones Asíncronas</a></li>
+        <li><a href="">URL en Javascript</a></li>
+        <li><a href="">Política CORS</a></li>
       </ul>
     </div>
   </div>
