--- a/devA/javaScript/apuntesJavascript/objetoMath.html
+++ b/devA/javaScript/apuntesJavascript/objetoMath.html
@@ -12,26 +12,7 @@
 <body>
     <header><h1>Sintáxis Básica</h1></header>
     <div class="contenedor">
-        <div class="indice">
-            <ol>
-                <li>Intro</li>
-                <li>Variables y ambitos</li>
-                <li>Tipos de datos</li>
-                <li>Operadores y expresiones</li>
-                <li>Control de flujo</li>
-                <li>Gestión de errores</li>
-                <li>Bucles</li>
-                
-            </ol>
-            <ol start="8">
-                <li>Objetos</li>
-                <li>Funciones</li>
-                <li>Clases</li>
-                <li>Expresiones regulares</li>
-                <li>Eventos</li>
-                <li>DOM</li>
-            </ol>
-        </div>
+        <div class="botonVolver"><h4><a href="indice.html"><<< Indice</a></h4></div>
         <h2>Objeto Math</h2>
         <p>En javascript es posible realizar gran cantidad de operaciones matemáticas de forma nativa, sin necesidad de librerías externas. Para ello utilizamos el objeto Math, que es un objeto interno que tiene incorporadas ciertas constantes y métodos (funciones).</p>
         <h3>Constantes de Math</h3>
@@ -398,6 +379,7 @@
             </tbody>
         </table>
         <p>Al contrario que muchos otros objetos, en estas ocasiones hemos indicado explícitamente el objeto (Math.round(numero)), en lugar de hacerlo sobre la variable (numero.round()). Esto ocurre porque Math es un objeto con métodos y constantes estáticas, algo que veremos en profundidad en futuros temas.</p>
+        <div class="botonVolver"><h4><a href="indice.html"><<< Indice</a></h4></div>
     </div>
 </body>
 </html>
