--- a/devA/javaScript/apuntesJavascript/posicionesSubstring.html
+++ b/devA/javaScript/apuntesJavascript/posicionesSubstring.html
@@ -12,26 +12,7 @@
 <body>
     <header><h1>Sintáxis Básica</h1></header>
     <div class="contenedor">
-        <div class="indice">
-            <ol>
-                <li>Intro</li>
-                <li>Variables y ambitos</li>
-                <li>Tipos de datos</li>
-                <li>Operadores y expresiones</li>
-                <li>Control de flujo</li>
-                <li>Gestión de errores</li>
-                <li>Bucles</li>
-                
-            </ol>
-            <ol start="8">
-                <li>Objetos</li>
-                <li>Funciones</li>
-                <li>Clases</li>
-                <li>Expresiones regulares</li>
-                <li>Eventos</li>
-                <li>DOM</li>
-            </ol>
-        </div>
+        <div class="botonVolver"><h4><a href="indice.html"><<< Indice</a></h4></div>
         <h2>Posiciones y substrings</h2>
         <p>Una <b>substring</b> es un fragmento más pequeño que forma parte de un string. También se suele hacer referencia a ellos como subcadena o subcadena de texto.</p>
         <p>Una <b>posición</b> es un number que representa el lugar donde está ubicado un substring, teniendo en cuenta que se empieza a contar en 0. Así pues, la primera letra del string tendría el índice 0, la segunda 1, la tercera 2, etc...</p>
@@ -134,6 +115,7 @@
                 </tr>
             </tbody>
         </table>
+        <div class="botonVolver"><h4><a href="indice.html"><<< Indice</a></h4></div>
     </div>
 </body>
 </html>
