--- a/devA/javaScript/apuntesJavascript/sintaxisBasica.html
+++ b/devA/javaScript/apuntesJavascript/sintaxisBasica.html
@@ -12,6 +12,7 @@
 <body>
     <header><h1>Sintáxis Básica</h1></header>
     <div class="contenedor">
+        <div class="botonVolver"><h4><a href="indice.html"><<< Indice</a></h4></div>
         <h2>Introducción</h2>
         <h3>La consola</h3>
         <table>
@@ -499,6 +500,7 @@
                 </tr>
             </tbody>
         </table>
+        <div class="botonVolver"><h4><a href="indice.html"><<< Indice</a></h4></div>
     </div>
 </body>
 </html>
