--- a/devA/javaScript/apuntesJavascript/nan.html
+++ b/devA/javaScript/apuntesJavascript/nan.html
@@ -12,21 +12,7 @@
 <body>
     <header><h1>Sintáxis Básica</h1></header>
     <div class="contenedor">
-        <ol class="indice">
-            <li>Intro</li>
-            <li>Variables y ambitos</li>
-            <li>Tipos de datos</li>
-            <li>Operadores y expresiones</li>
-            <li>Control de flujo</li>
-            <li>Gestión de errores</li>
-            <li>Bucles</li>
-            <li>Objetos</li>
-            <li>Funciones</li>
-            <li>Clases</li>
-            <li>Expresiones regulares</li>
-            <li>Eventos</li>
-            <li>DOM</li>
-        </ol>
+        <div class="botonVolver"><h4><a href="indice.html"><<< Indice</a></h4></div>
         <h2>NaN - Not a number</h2>
         <p>NaN es un valor especial, que significa Not a number (No es un número), aunque no es su significado literal. Se usa para representar valores numéricos que son indeterminados o imposibles de representar como número.</p>
         <ul>
@@ -80,6 +66,7 @@
                 Number(NaN);    //NaN
             </code>
         </pre>
+        <div class="botonVolver"><h4><a href="indice.html"><<< Indice</a></h4></div>
     </div>
 </body>
 </html>
