--- a/devA/javaScript/apuntesJavascript/number.html
+++ b/devA/javaScript/apuntesJavascript/number.html
@@ -12,22 +12,7 @@
 <body>
     <header><h1>Sintáxis Básica</h1></header>
     <div class="contenedor">
-        <ol class="indice">
-            <li>Intro</li>
-            <li>Variables y ambitos</li>
-            <li>Tipos de datos</li>
-            <li>Operadores y expresiones</li>
-            <li>Control de flujo</li>
-            <li>Gestión de errores</li>
-            <li>Bucles</li>
-            <li>Objetos</li>
-            <li>Funciones</li>
-            <li>Clases</li>
-            <li>Expresiones regulares</li>
-            <li>Eventos</li>
-            <li>DOM</li>
-        </ol>
-
+        <div class="botonVolver"><h4><a href="indice.html"><<< Indice</a></h4></div>
         <h2>Number</h2>
         <h3>Declaración</h3>
         <p>Los números son uno de los tipos primitivos que para crearlos basta con escribirlos. También se pueden representar con objetos declarandolos mediante la palabra clave new, aunque no se suele utilizar ya que es bastante más complicado.</p>
@@ -212,6 +197,7 @@
             </code>
         </pre>
         <p>En todos los casos, el número se convierte a tipo de dato string.</p>
+        <div class="botonVolver"><h4><a href="indice.html"><<< Indice</a></h4></div>
     </div>
 </body>
 </html>
