--- a/devA/javaScript/apuntesJavascript/string.html
+++ b/devA/javaScript/apuntesJavascript/string.html
@@ -12,26 +12,7 @@
 <body>
     <header><h1>Sintáxis Básica</h1></header>
     <div class="contenedor">
-        <div class="indice">
-            <ol>
-                <li>Intro</li>
-                <li>Variables y ambitos</li>
-                <li>Tipos de datos</li>
-                <li>Operadores y expresiones</li>
-                <li>Control de flujo</li>
-                <li>Gestión de errores</li>
-                <li>Bucles</li>
-                
-            </ol>
-            <ol start="8">
-                <li>Objetos</li>
-                <li>Funciones</li>
-                <li>Clases</li>
-                <li>Expresiones regulares</li>
-                <li>Eventos</li>
-                <li>DOM</li>
-            </ol>
-        </div>
+      <div class="botonVolver"><h4><a href="indice.html"><<< Indice</a></h4></div>
         <h3>Tipo de dato String</h3>
         <p>Una de las tareas que más solemos hacer es menejar cadenas de texto y realizar tareas con ellas. Cuando hablamos de una variable que posee información de texto, decimos que su tipo de dato es string.</p>
         <table>
@@ -154,6 +135,7 @@
             crearBoton("warning", "Eliminar");
           </code>
         </pre>
+        <div class="botonVolver"><h4><a href="indice.html"><<< Indice</a></h4></div>
     </div>
 </body>
 </html>
