--- a/daw/dwEntornoCliente/dwEC_Cuatro.html
+++ b/daw/dwEntornoCliente/dwEC_Cuatro.html
@@ -20,7 +20,9 @@
         </header>
         <div class="contenedorApuntes">
             <h2 class="tituloTema" id="subUno">Tema 4. - Programación con arrays, funciones y objetos definidos por el usuario</h2>
-            
+            <p>Variable capaz de gestionar conjuntos de datos. Son los arrays de datos, también conocidos como listas, vectores o matrices.</p>
+            <p>Los arrays son variables que nos permiten almacenar en una misma estructura un conjunto de valores. Para poder acceder a un dato dentro del array es necesario indicar su posición, que es un número entero conocido como <b>índice</b>.</p>
+            <p>El primer elemento del array tiene índice O.</p>
             <!--*********************************************************************-->
             <h3 class="subTitulo">Funciones predefinidas del lenguaje</h3>
           
