--- a/index.html
+++ b/index.html
@@ -11,111 +11,19 @@
     <link rel="stylesheet" href="./css/mediaQ.css">
     <title>SapheryDesings - Portfolio</title>
   </head>
-  <body class="main--Principal">
-    <section class="presentacion">
-      <span>SapheryDesings</span>
-    </section>
-    <!----------------------------------------->
-    <section><h3 class="tituloSeccion">Asignaturas DAW</h3></section>
-    <!----------------------------------------->
-    <section class="daw">
-      <a href="./daw/sistemas/indiceSistemas.html">
-        <div class="card">
-          <div><h3>Sistemas Informáticos</h3></div>
-          <div><h5>Primer Semestre</h5></div>
+  <body>
+    <main class="main--Principal">
+      <header>
+        <div class="navegacion">
+          <button id="inicio"><a href="index.html">Inicio</a></button>
+          <button id="daw"><a href="./daw/dAw.html">dAw</a></button>
+          <button id="devA"><a href="./devA/.devA.html">devA</a></button>
+          <button id="proyectos"><a href="proyectos.html">Proyectos</a></button>
         </div>
-      </a>
-      <!----------------------------------------->
-      <a href="./daw/proUno/indiceProUno.html">
-        <div class="card">
-          <div><h3>Programación I</h3></div>
-          <div><h5>Primer Semestre</h5></div>
+        <div class="sesion">
+            <button id="sesion"><a href="formularioSesion.html">Iniciar Sesión</a></button>
         </div>
-      </a>
-      <!----------------------------------------->
-      <a href="./daw/proDos/indiceProDos.html">
-        <div class="card segundoT">
-          <div><h3>Programación II</h3></div>
-          <div><h5>Segundo Semestre</h5></div>
-        </div>
-      </a>
-      <!----------------------------------------->
-      <a href="./daw/bdUno/indiceBdUno.html">
-        <div class="card segundoT">
-          <div><h3>Bases de Datos I</h3></div>
-          <div><h5>Segundo Semestre</h5></div>
-        </div>
-      </a>
-      <!----------------------------------------->
-      <a href="./daw/Len_Marcas/indiceLen_Marcas.html">
-        <div class="card segundoT">
-          <div><h3>Lenguajes de Marcas</h3></div>
-          <div><h5>Segundo Semestre</h5></div>
-        </div>
-      </a>
-      <!----------------------------------------->
-      <a href="./daw/entornoDesarrollo/indice_entornoDesarrollo.html">
-        <div class="card tercerT">
-          <div><h3>Entornos de Desarrollo</h3></div>
-          <div><h5>Tercer Semestre</h5></div>
-        </div>
-      </a>
-      <!----------------------------------------->
-      <a href="./daw/dwEntornoCliente/indice_dwEc.html">
-        <div class="card tercerT">
-          <div><h3>Desarrollo web en Entorno Cliente</h3></div>
-          <div><h5>Tercer Semestre</h5></div>
-        </div>
-      </a>
-      <!----------------------------------------->
-      <a href="./daw/fol/indice_fol.html">
-        <div class="card tercerT">
-          <div><h3>Formación y Orientación Laboral</h3></div>
-          <div><h5>Tercer Semestre</h5></div>
-        </div>
-      </a>
-      <!----------------------------------------->
-      <a href="#">
-        <div class="card inactiva">
-          <div><h3>Desarrollo web en Entorno Servidor</h3></div>
-          <div><h5>x Semestre</h5></div>
-        </div>
-      </a>
-      <!----------------------------------------->
-      <a href="#">
-        <div class="card inactiva">
-          <div><h3>Despliegue de Aplicaciones Web</h3></div>
-          <div><h5>x Semestre</h5></div>
-        </div>
-      </a>
-      <!----------------------------------------->
-      <a href="#">
-        <div class="card inactiva">
-          <div><h3>Diseño de Interfaces Web</h3></div>
-          <div><h5>x Semestre</h5></div>
-        </div>
-      </a>
-      <!----------------------------------------->
-      <a href="#">
-        <div class="card inactiva">
-          <div><h3>Empresa e iniciativa Emprendedora</h3></div>
-          <div><h5>x Semestre</h5></div>
-        </div>
-      </a>
-      <!----------------------------------------->
-      <a href="#">
-        <div class="card inactiva">
-          <div><h3>Proyecto de Desarrollo de aplicaciones web</h3></div>
-          <div><h5>x Semestre</h5></div>
-        </div>
-      </a>
-      <!----------------------------------------->
-    </section>
+      </header>
+    </main>
   </body>
 </html>
-
-<!-----------------------------------------
-      <section><h3 class="tituloSeccion">devAcademy</h3></section>
-      <section class="devAcademy"></section>
-      <section><h3 class="tituloSeccion">Proyectos</h3></section>
-      <section class="proyectos"></section> -->
