--- a/daw/fol/fol_Siete.html
+++ b/daw/fol/fol_Siete.html
@@ -130,6 +130,8 @@
                         <th>Prioridad</th>
                         <th>Características</th>
                     </tr>
+                </thead>
+                <tbody>
                     <tr>
                         <td>Rojo</td>
                         <td>Prioridad I</td>
@@ -150,7 +152,7 @@
                         <td>Prioridad 0</td>
                         <td>No requieren atención inmediata, personas fallecidas o con pocas posibilidades de supervivencia. Traumatismo caraneoencefálico con salida de masa encefálica o un fallo multiorgánico.</td>
                     </tr>
-                </thead>
+                </tbody>
             </table>
             <p>Las principales amenazas para la vida las constituyen las hemorragias, la afixia y el <b>shock</b>.</p>
             <h4 class="apartado">7.4.1. Soporte vital básico</h4>
